# internal-developer-platform-lite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  cicd.yml  internal-ci.yml
dashboard/: package-lock.json
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/components/: CreateServiceModal.css  CreateServiceModal.tsx  ServiceList.css  ServiceList.tsx
docs/: ai_integration.md  architecture.md  cicd_pipeline.md  demo_script.md  design_thinking.md  grafana-dashboard.json  multi_cloud.md  observability.md  quickstart.md  standards.md  testing_strategy.md
examples/my-ai-service/: AI_OPTIMIZATION.md  __init__.py  docker-compose.yml  pyproject.toml
examples/my-ai-service/app/: config_provider.py  logging_config.py  middleware.py  routers.py
examples/my-ai-service/config/: dev.yaml  prod.yaml
examples/my-ai-service/tests/: test_health.py
examples/my-java-service/: pom.xml
examples/sample-service/: Dockerfile  docker-compose.yml  pyproject.toml
examples/sample-service/app/: __init__.py  config_provider.py  logging_config.py
examples/sample-service/config/: dev.yaml  staging.yaml
pipelines/github-actions/: deploy.yml  service-ci.yml
platform/: __init__.py
platform/api/: Dockerfile  __init__.py  main.py  requirements.txt
platform/api/routers/: services.py
platform/cli/: idp.py  requirements.txt
platform/templates/fastapi_service/: .env.example  docker-compose.yml  (+1 more)
tests/: test_api_integration.py  test_config_provider.py  test_e2e_workflow.py  test_generated_services.py  test_smoke_service.py  test_template_generation.py
(+6 files in other folders)
